--- a/test/nonn-et-al/demo.ipynb
+++ b/test/nonn-et-al/demo.ipynb
@@ -2350,7 +2350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2364,7 +2364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
