--- a/tutorials/exploration.ipynb
+++ b/tutorials/exploration.ipynb
@@ -608,7 +608,7 @@
     "handlers = []\n",
     "vals = []\n",
     "for g in sdata_p.genes[sdata_p.counts>30]:\n",
-    "    val,_,_=plt.hist(sdata_p[sdata_p.g==g].phi,color=(0,0,0,0),ec=sdata_p.obsc.c_genes[g],bins=np.linspace(-1.52,1.52,10))\n",
+    "    val,_,_=plt.hist(sdata_p[sdata_p.g==g].phi,color=(0,0,0,0),ec=sdata_p.var.c_genes[g],bins=np.linspace(-1.52,1.52,10))\n",
     "    vals.append(val.copy())\n",
     "vals=np.array(vals)"
    ]
@@ -1025,8 +1025,8 @@
     "\n",
     "for i in range(n_classes):\n",
     "    for j in range(n_classes):\n",
-    "        plt.scatter(i,j,color=sdata.obsc.c_genes[i],s=800,facecolor=(0,0,0,0),linewidths=4)\n",
-    "        plt.scatter(i,j,color=sdata.obsc.c_genes[j],s=400,facecolor=(0,0,0,0),linewidths=4)\n",
+    "        plt.scatter(i,j,color=sdata.var.c_genes[i],s=800,facecolor=(0,0,0,0),linewidths=4)\n",
+    "        plt.scatter(i,j,color=sdata.var.c_genes[j],s=400,facecolor=(0,0,0,0),linewidths=4)\n",
     "#         txt = plt.text(i,j,f\"{attraction[i,j]:1.2f}\",va='center',ha='center',fontweight='bold',fontsize=15,color='w')\n",
     "#         txt.set_path_effects(\n",
     "#             [PathEffects.withStroke(linewidth=4, foreground='k')])\n",
