--- a/tutorials/single-cell.ipynb
+++ b/tutorials/single-cell.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdata.obsc.loc['Cck','c_genes']='yellow'"
+    "sdata.var.loc['Cck','c_genes']='yellow'"
    ]
   },
   {
